<resources>
    <string name="app_name">Chérie</string>
    <string name="register_account_type">Register Account Type</string>
    <string name="enter_user_name">User name</string>
    <string name="enter_mobile_number">Mobile number</string>
    <string name="mobile_number">Mobile number</string>
    <string name="enter_password">Password</string>
    <string name="c_password">Confirm Password</string>
    <string name="new_password">Enter your new password</string>
    <string name="confirm_new_password">Enter confirm password</string>
    <string name="enter_country_name">Country</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_small_up">Sign up</string>
    <string name="facing_issue">Facing an issue?</string>
    <string name="contact_help_center">Contact Help Center</string>
    <string name="personal">Personal</string>
    <string name="company">Company</string>
    <string name="don_t_have_an_account">Don\'t have an account</string>
    <string name="reset">Reset</string>
    <string name="skip">Skip</string>
    <string name="skip_for_now">Skip for Now</string>
    <string name="next">Next</string>
    <string name="session_expire">Session Expired</string>
    <string name="market_place_for">Marketplace for</string>
    <string name="nft_and_tarditional_art"><![CDATA[NFT & Traditional art]]></string>
    <string name="receive_pay_through">Receive | Pay through</string>
    <string name="paypal_criptocurrency_much_more">Paypal Cryptocurrency Much more..</string>
    <string name="buy_share_of_artwork">Buy share of artwork</string>
    <string name="you_can_now_buy_the_share_of_an_artwork">You can now buy the share of an artwork</string>
    <string name="sell_share_of_artwork">Sell share of artwork</string>
    <string name="you_can_now_sell_the_share_of_an_artwork">You can now sell the share of an artwork</string>
    <string name="our_user">Our user</string>
    <string name="instantly_happy_cherie_users">Instantly happy Cherie users</string>
    <string name="company_name">Company</string>
    <string name="enter_email">Email</string>
    <string name="email_address_required">Email address is required</string>
    <string name="password_required">Password is required</string>
    <string name="confirm_password_required">Confirm Password is not match</string>
    <string name="contain_capital">Contain Capital Small Number or Symbol 8 or more charector</string>
    <string name="must_be_at_list">Must be at least 8 characters</string>
    <string name="email_address_invalid">Invalid email address</string>
    <string name="password_invalid">Password must be of 6 – 12 characters, contain at least one capital letter and one number and one special character</string>
    <string name="password_must_be">Password must be at least 8 characters long</string>
    <string name="password_contain">Contains small latter, cap latter, number, symbol</string>
    <string name="password_don_t_match">Password does not match</string>
    <string name="forget_password">Forgot password?</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_small_in">Sign in</string>
    <string name="welcome">Welcome,</string>
    <string name="confirm">Confirm</string>
    <string name="sing_in_to_continue">Sign in to Continue!</string>
    <string name="google_login">Google</string>
    <string name="facebook_login">Facebook</string>
    <string name="kakao_login">Kakao</string>
    <string name="line_login">Line</string>
    <string name="reset_your_password">Forgot your password?</string>
    <string name="back">Back</string>
    <string name="question">Question</string>
    <string name="forgot_password_description">Enter the email associated with your account and we’ll send an email with instructions to reset your password.</string>
    <string name="otp_description">Enter the mobile associated with your account and we’ll send an OTP to reset your password.</string>
    <string name="send_instructions">Send Instructions</string>
    <string name="check_your_mail">Email has been send!</string>
    <string name="sent_email_description">We have sent a password recover instructions to your email.</string>
    <string name="open_email_app">Open Email app</string>
    <string name="skip_i_ll_confirm_later">Skip, I’ll confirm later</string>
    <string name="reset_password_again">Did not receive the email? Check your spam filter, or <font color='#000000'><b>try another email address</b></font></string>
    <string name="ntf_art_marketplace">NFT art marketplace</string>
    <string name="show_hide_password">Show/Hide password</string>
    <string name="or_continue_with">or continue with</string>
    <string name="don_t_have_an_account_sign_up">Don’t have an account? <font color='#000000'><b>Sign Up</b></font></string>
    <string name="sign_up_with_email">Sign Up With Email</string>
    <string name="sign_up_with_google">Sign Up With Google</string>
    <string name="sale_started_at">Started at 6/07/21 SH 10M 13S</string>
    <string name="sale_end_hours">4H 15M 11S</string>
    <string name="already_have_an_account_sign_in">Already have an account? <font color='#000000'><b>Sign In</b></font></string>
    <string name="email_valid">Email valid</string>
    <string name="market">Market</string>
    <string name="wallet">Wallet</string>
    <string name="news">News</string>
    <string name="profile">Profile</string>
    <string name="facing_issue_contact_help_center">Facing Issue?</string>
    <string name="store">Store</string>
    <string name="setting">Setting</string>
    <string name="notifications">Notification</string>
    <string name="for_you">For you</string>
    <string name="traditional_art">Traditional Art</string>
    <string name="ntf_art">NFT Art</string>
    <string name="show_more_comments">Show More Comments</string>
    <string name="show_more">Show More</string>
    <string name="art">Art</string>
    <string name="this_is_a_unique_artwork"><u>this is a unique artwork</u></string>
    <string name="on_sale">On Sale</string>
    <string name="top_traditional_artists">Top Traditional Artists</string>
    <string name="see_all">See All</string>
    <string name="top_nft_artists">Top NFT Artists</string>
    <string name="follow">Follow</string>
    <string name="un_follow">Unfollow</string>
    <string name="following">Following</string>
    <string name="search_by_artist_or_creation">Search by artist or creation</string>
    <string name="no_data_found">No data found</string>
    <string name="mobile_number_required">Mobile number is required</string>
    <string name="mobile_number_invalid">Invalid mobile number</string>
    <string name="username_required">Username is required</string>
    <string name="firstname_required">First name is required</string>
    <string name="lastname_required">Last name is required</string>
    <string name="username_invalid">User name must be alphabets</string>
    <string name="firstname_invalid">First name must be alphabets</string>
    <string name="lastname_invalid">Last name must be alphabets</string>
    <string name="company_name_required">Company name is required</string>
    <string name="company_name_invalid">Invalid company name</string>
    <string name="marketplace">Marketplace</string>
    <string name="choose_traditional_or_ntf_art_marketplace">Choose Traditional or NTF Art marketplace</string>
    <string name="full_trading">Full Trading</string>
    <string name="my_trading">My Trading</string>
    <string name="trading_division">Trading Division</string>
    <string name="buying">Buying</string>
    <string name="no_items_found">No Items Found</string>
    <string name="you_dont_have_item_to_trade_buy_one_to_trade">You don’t have item to trade.\nBuy one to trade.</string>
    <string name="buy_now">Buy</string>
    <string name="buy_now_new">Buy Now</string>
    <string name="your_buy_amount">Your buy amount</string>
    <string name="your_account_balance">Your account balance</string>
    <string name="you_are_buying">You are buying</string>
    <string name="total">Total</string>
    <string name="pay">Pay:</string>
    <string name="select_payment">Select Payment</string>
    <string name="comments">Comments</string>
    <string name="no_comments_yet">No Comments Yet</string>
    <string name="type_your_comment_here">Type your comment here</string>
    <string name="menu">Menu</string>
    <string name="select_payment_method">Select payment method</string>
    <string name="static_bank_name">Bank Name: %s</string>
    <string name="static_card_no">XXXX XXXX XXXX %s</string>
    <string name="last_used">Last time used: Wed, 23 April 2021</string>
    <string name="bank_name">Bank Name</string>
    <string name="account_name">Account Name</string>
    <string name="account_number">Account Number</string>
    <string name="account_no">Acc. Number: %s</string>
    <string name="payment_method">Payment Method</string>
    <string name="credit_card_debit_card">(Credit/Debit card)</string>
    <string name="add_new_card">+ Add new Card</string>
    <string name="_add_new_card">Add new Card</string>
    <string name="card_number">Card Number</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="cvc_cvv">Cvv No.</string>
    <string name="dont_worry">Don’t worry </string>
    <string name="grand_total">Grand Total</string>
    <string name="your_card_info">Your card information is safe with us</string>
    <string name="your_bank_info">Your account information is safe with us</string>
    <string name="mark_this_card">Mark this Card as default</string>
    <string name="cardholder_name">Cardholder Name</string>
    <string name="add_street_address">Add Street Address</string>
    <string name="add_city">Add City</string>
    <string name="add_postal_code">Add postal code</string>
    <string name="save">Save</string>
    <string name="ending_in">Ending in: </string>
    <string name="sales_amount">Sales Amount:</string>
    <string name="title">Title</string>
    <string name="sold_out_">Sold out:</string>
    <string name="year">Year</string>
    <string name="soles_rate">"Sales Rate: %d%%"</string>
    <string name="holders_people">Holders: %s</string>
    <string name="number_off_sell">%s Sell</string>
    <string name="buy">Buy</string>
    <string name="trade">Trade</string>
    <string name="my">My</string>
    <string name="more">More</string>
    <string name="please_start_verification_for_the_full_service">Please, Start Verification for the full service</string>
    <string name="current_feature">Current Feature</string>
    <string name="your_account_is_currently_not_verified">Your account is currently not verified</string>
    <string name="complete_verification_please">Complete verification to access buy and trading service on Chérie.</string>
    <string name="verified">Verified</string>
    <string name="personal_information">Personal information</string>
    <string name="identity_verification">Identity Verification</string>
    <string name="facial_recognition">Facial recognition</string>
    <string name="review_time_maximum_10_days">Review time: Maximum 10 days</string>
    <string name="step_1">Step 1</string>
    <string name="step_2">Step 2</string>
    <string name="step_3">Step 3</string>
    <string name="step_4">Step 4</string>
    <string name="start_verification">Start Verification</string>
    <string name="continue_label">Continue</string>
    <string name="use_valid_government_issued_document">Use valid government-issued document</string>
    <string name="doc_desc">Only the following document listed below will be accepted, all other documents will be rejected.</string>
    <string name="government_issued_id_card">Government Issued ID Card</string>
    <string name="passport">Passport</string>
    <string name="driver_s_license">Driver’s License</string>
</resources>